--- a/webbrowser.yml
+++ b/webbrowser.yml
@@ -6,6 +6,10 @@
     apt:
       name: apache2
       state: present
+- name: i wANT TO START WEBSERVER
+  service: 
+      name: apache2
+      state: started
      
 
    
